[package]
name = "activity-analyzer"
version = "1.1.0"
authors = ["Mike Simms <msimms01@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
gpx = "*"
fit_file = "0.3.3"
tcx = "0.9.2"
chrono = "*"
kmeans = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
lib_math = { path = "../LibMath/rust/" }
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
xmlwriter = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
